WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217999
A video element may fail to enter picture-in-picture from fullscreen
https://bugs.webkit.org/show_bug.cgi?id=217999
Summary
A video element may fail to enter picture-in-picture from fullscreen
Peng Liu
Reported
2020-10-20 15:54:48 PDT
A video element may fail to enter picture-in-picture from fullscreen
Attachments
Patch
(2.82 KB, patch)
2020-10-20 16:23 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-10-20 15:55:25 PDT
<
rdar://70113355
>
Peng Liu
Comment 2
2020-10-20 16:23:20 PDT
Created
attachment 411936
[details]
Patch
EWS
Comment 3
2020-10-21 12:22:00 PDT
Committed
r268816
: <
https://trac.webkit.org/changeset/268816
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411936
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug